<resources>
    <string name="app_name">Aquaculture</string>
    <string name="title_activity_login">Sign in</string>
    <string name="google_maps_api_key">AIzaSyBwVy7I7ml1ioG0yuGvEyC_44uVYu3nusE</string>
    <string name="open_weather_api_key">6395962d50ad8708214a391bc4147a3c</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sidenavi">sidenavi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pi_id">PI ID</string>
    <string name="pond_name">Pond Name</string>
    <string name="pond_location">Pond Location</string>
    <string name="exit">Exit</string>
    <string name="add_pond">Add Pond</string>
    <string name="value_check">VALUE CHECK!</string>
    <string name="ch1">ch1</string>
    <string name="ch3">ch3</string>
    <string name="ch2">ch2</string>
    <string name="pi_1">Pi 1</string>
    <string name="pond_id">Pond ID:</string>
    <string name="pond_1">Pond 1</string>
    <string name="location">Location:</string>
    <string name="locat">Locat</string>
    <string name="tempeature">Tempeature:</string>
    <string name="read">Read</string>
    <string name="atomatic">Atomatic</string>
    <string name="off">OFF</string>
    <string name="going_to_graph">GOING TO GRAPH</string>
    <string name="date_here">Date Here</string>
    <string name="temperature_here">Temperature Here</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="plot_graph">Plot Graph</string>
    <string name="select_end_date">Select End Date</string>
    <string name="done">Done</string>
    <string name="pending">Pending</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
