<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:orientation="vertical"
    app:cardBackgroundColor="#7CFFFFFF"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtViewPiID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="3dp"
            android:text="@string/pi_id"
            android:textColor="#075E54"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewPondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:textSize="17sp"
            android:text="@string/pond_name"
            android:textColor="#075E54"/>
        <TextView
            android:id="@+id/txtViewPondLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingBottom="8dp"
            android:textSize="17sp"
            android:text="@string/pond_location"
            android:textColor="#075E54"/>
    </LinearLayout>

</android.support.v7.widget.CardView>