<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="10dp"
    android:orientation="vertical"
    app:cardBackgroundColor="#865050"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtViewPiID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:text="@string/pi_id"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtViewPondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:text="@string/pond_name"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtViewPondLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="5dp"
            android:text="@string/pond_location"
            android:textColor="#ffffff"
            android:textSize="30sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>